<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Descubre Peru</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Login -->
    <string name="login_fb">Entrar con Facebook</string>
    <string name="login_tw">Entrar con Twitter</string>
    <!-- Select Type -->
    <string name="ruta">Ruta</string>
    <string name="turismo">Turistica</string>
    <string name="gastronomia">Gastronomica</string>
    <string name="nocturno">Nocturna</string>
    <!-- Detail Place -->
    <string name="name_place">Nombre del lugar</string>
    <string name="description_place">Descripcion del lugar</string>
    <string name="comment_place">Ingrese comentario</string>
    <string name="show_comments">Ver Comentarios</string>
    <!-- Item route List-->
    <string name="route_name">Ruta de Cristian</string>
    <string name="route_likes">8 Likes</string>
    <!-- Fragment Region -->
    <string name="route_create">Crear Ruta</string>
    <!-- Register Place -->
    <string name="register_place">Registrar Sitio</string>

    <string name="tutorial_crear">Crear</string>
    <string name="tutorial_entrar">Entrar</string>
    <string name="tutorial_turismo">Conoce todos los rincones del Perú</string>
    <string name="tutorial_gastronomia">Crea y comparte las rutas que seguiste en tu viaje</string>
    <string name="tutorial_nocturno">Ayuda a los turistas a conocer nuestro Perú </string>

    <string name="region_lima">Lima</string>
    <string name="region_ica">Ica</string>
    <string name="region_cusco">Cusco</string>

    <string name="app_id">BKNI1bsBMI0jWhzCitMgsW9EZEaUC8n9N8K4lTUt</string>
    <string name="client_key">MJYQch3xqxxOZqrioO93Jgr2wAtQZUDsXEBr30Fb</string>
    <string name="google_maps_key">AIzaSyBYkFn3KC3npxDnnP9_foX6niJDlPEZNYM</string>
    <string name="facebook_app_id">352674628234949</string>
</resources>
