<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/background_ica" />

            <TextView
                android:padding="10dp"
                android:textColor="@color/flatui_wet_asphalt"
                android:id="@+id/txt_name_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/name_place" />

            <TextView
                android:padding="10dp"
                android:textColor="@color/flatui_wet_asphalt"
                android:id="@+id/txt_description_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/description_place" />

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:id="@+id/detail_map"
                tools:context=".Nomadapp_Main"
                android:name="com.google.android.gms.maps.SupportMapFragment" />

            <TextView
                android:id="@+id/txt_show_comments"
                android:layout_margin="10dp"
                android:background="@drawable/holo_flat_button_red"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/show_comments" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>