<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/portada_ruta_gastronomica_blur">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:visibility="gone"
            android:id="@+id/imagelocal"
            android:src="@drawable/background_ica"
            android:layout_marginTop="48dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Add Image"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/color_blanco"
            android:textStyle="bold"
            android:visibility="visible"
            android:id="@+id/btn_add_image_place"
            android:background="#99000000"
            android:layout_marginTop="48dp" />

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/place_map"
            tools:context=".Nomadapp_Main"
            android:name="com.google.android.gms.maps.SupportMapFragment" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:background="@drawable/holo_flat_edittext_red"
                android:padding="5dp"
                android:hint="@string/name_place"
                android:layout_height="45dp"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:lines="1"
                android:imeOptions="actionNext"
                android:layout_marginTop="10dp"
                android:maxLines="1"
                android:layout_marginRight="5dp"
                android:id="@+id/edtnombrelocal" />

            <EditText
                android:layout_width="match_parent"
                android:background="@drawable/holo_flat_edittext_red"
                android:padding="5dp"
                android:hint="@string/description_place"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:layout_marginTop="5dp"
                android:lines="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:id="@+id/edtdescripcionlocal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/holo_flat_edittext_red"
                android:padding="5dp"
                android:hint="@string/comment_place"
                android:layout_gravity="center"
                android:gravity="center"
                android:maxLines="1"
                android:lines="1"
                android:imeOptions="actionGo"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:id="@+id/edtcomentariolocal" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textColor="@color/white"
                android:background="@drawable/holo_flat_button_red"
                android:text="@string/register_place"
                android:textStyle="bold"
                android:id="@+id/btnregistrarplace"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>